tests/valid/deref_assign.fl
using import "../c.fl";

main :: proc () {
  a: i32 = 123;
  a = 321;
  b := &a;
  *b = 5423;
  printf(c"a = %d\n", a);
  printf(c"*b = %d\n", *b);

  c: **i32 = &b;
  **c = 9001;
  printf(c"a = %d\n", a);
  printf(c"*b = %d\n", *b);
  printf(c"**c = %d\n", **c);

  a = 123123;
  printf(c"a = %d\n", a);
  printf(c"*b = %d\n", *b);
  printf(c"**c = %d\n", **c);
}
