tests/invalid/reassign_constant.fl
main :: proc () {
  main = 123;
}
